# 2025_I2P2_TowerDefense-main

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Account/: AccountManager.cpp  AccountManager.hpp  LocalAndOnlineScene.cpp  LocalAndOnlineScene.hpp  LoginOnlineScene.cpp  LoginOnlineScene.hpp  LoginScene.cpp  LoginScene.hpp  RegisterOnlineScene.cpp  RegisterOnlineScene.hpp  RegisterScene.cpp  RegisterScene.hpp  ScoreboardOnline.cpp  ScoreboardOnline.hpp
Bullet/: FireBullet.cpp  RocketBullet.cpp  RocketBullet.hpp
Enemy/: BatEnemy.cpp  BatEnemy.hpp  BigTankEnemy.cpp  BigTankEnemy.hpp  CaninaEnemy.cpp  CaninaEnemy.hpp  DemonEnemy.cpp  DemonEnemy.hpp  Enemy.cpp  Enemy.hpp  FlyEnemy.cpp  FlyEnemy.hpp  GolemEnemy.cpp  GolemEnemy.hpp  NecromancerEnemy.cpp  NecromancerEnemy.hpp  PlaneEnemy.cpp  SlimeEnemy.cpp  SlimeEnemy.hpp  SoldierEnemy.cpp  SoldierEnemy.hpp  SorcererEnemy.cpp  SorcererEnemy.hpp  TankEnemy.cpp  WolfEnemy.cpp  WolfEnemy.hpp
Engine/: GameEngine.cpp  GameEngine.hpp  IScene.hpp  Sprite.cpp  Sprite.hpp
Resource/: accounts.txt  enemy1.txt  enemy2.txt  map1.txt  map2.txt  scoreboard.txt
Scene/: LoseScene.cpp  ModeSelectionScene.cpp  ModeSelectionScene.hpp  PlayScene.cpp  PlayScene.hpp  Scoreboard.cpp  Scoreboard.hpp  SettingsScene.cpp  SettingsScene.hpp  ShopScene.cpp  ShopScene.hpp  StageSelectScene.cpp  StageSelectScene.hpp  StartScene.cpp  StartScene.h  WinScene.cpp  WinScene.hpp
Shovel/: ShovelButton.hpp
Tetris/: TetrisBlock.cpp  TetrisBlock.hpp
Turret/: BallistaTurret.cpp  BallistaTurret.hpp  BombTurret.cpp  BombTurret.hpp  BowTurret.cpp  BowTurret.hpp  Hero.cpp  Hero.hpp  LaserTurret.cpp  LaserTurret.hpp  MachineGunTurret.cpp  MachineGunTurret.hpp  RocketTurret.cpp  RocketTurret.hpp  Turret.cpp  Turret.hpp
UI/Animation/: ParallaxBackground.cpp  ParallaxBackground.hpp  Plane.cpp
UI/Component/: ImageButton.cpp  ImageButton.hpp  Slider.cpp
